--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.default_schema=public
 cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.apikey=${CLOUDINARY_API_KEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
+#JWT
+spring.jwt.secret=${JWT_SECRET}
